--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <sql.version>8.0.25</sql.version>
         <spring-framework.version>5.3.15</spring-framework.version>
         <lombok.version>1.18.22</lombok.version>
+        <json-webtoken.version>0.11.2</json-webtoken.version>
     </properties>
 
     <dependencies>
@@ -72,20 +73,20 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version>0.11.2</version>
+            <version>${json-webtoken.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>0.11.2</version>
+            <version>${json-webtoken.version}</version>
             <scope>runtime</scope>
         </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
-            <version>0.11.2</version>
+            <version>${json-webtoken.version}</version>
             <scope>runtime</scope>
         </dependency>
 
