--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/apartment
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${url}
 spring.datasource.username=${username}
 spring.datasource.password=${password}
 application.jwt.secretKey=${secretKey}
