Updated class and package naming, and moved classes to another package

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+# DataSource Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${url}
 spring.datasource.username=${username}
 spring.datasource.password=${password}
-application.jwt.secretKey=${secretKey}
-application.jwt.tokenPrefix=${tokenPrefix}
-application.jwt.tokenExpirationAfterDays=7
+
+#Jwt configuration
+application.jwt-config.secretKey=${secretKey}
+application.jwt-config.tokenPrefix=${tokenPrefix}
+application.jwt-config.tokenExpirationAfterDays=7
